add new block home-page for acf

--- a/web/wp-content/themes/rankexperts/assets/css/home-page.css
+++ b/web/wp-content/themes/rankexperts/assets/css/home-page.css
@@ -799,6 +799,7 @@
 @media (min-width: 1024px) {
   .search-info__short-text {
     max-width: 51%;
+    margin-right: auto;
   }
 }
 .search-info__title {
