--- a/web/wp-content/themes/rankexperts/assets/css/custom.css
+++ b/web/wp-content/themes/rankexperts/assets/css/custom.css
@@ -1,3 +1,12 @@
 .team-text {
-    text-align: center;
+  text-align: center;
+}
+.reviews {
+  margin-top: 50px;
+}
+
+@media (min-width: 1024px) {
+  .reviews {
+    margin-top: 100px;
+  }
 }
