--- a/web/wp-content/themes/rankexperts/assets/css/custom.css
+++ b/web/wp-content/themes/rankexperts/assets/css/custom.css
@@ -10,8 +10,42 @@
 .showcase-item__img {
   height: calc(130px + (250 - 130) * ((100vw - 375px) / (1920 - 375)));
 }
-.showcases .showcase-item__date{
-  color:#f5f6f0;
+.showcases .showcase-item__date {
+  color: #f5f6f0;
+}
+.showcase-more_top__content {
+  margin-bottom: 50px;
+}
+.showcase-more_top__content p {
+  text-align: center;
+  max-width: 760px;
+  margin: 0 auto;
+  display: block;
+}
+.showcase-more__aboutcase-container {
+  max-width: 550px;
+}
+.showcase-more__aboutcase image {
+  width: 100%;
+  object-fit: cover;
+  height: auto;
+}
+.showcase-more__aboutcasebox figure {
+  width: auto !important;
+}
+.showcase-more__aboutcasebox .wp-caption-text{
+  text-align: center;
+  font-style: italic;
+}
+.showcase__subtitle {
+  font-weight: 500;
+  font-size: calc(20px + (24 - 20) * ((100vw - 375px) / (1920 - 375)));
+}
+.showcase__subtitle{
+  padding-left: calc(44.2233px + 4.20712vw);
+  margin-bottom: 15px;
+  max-width: 737px;
+  font-weight: 500;
 }
 @media (min-width: 1024px) {
   .reviews {
@@ -19,6 +53,16 @@
   }
   .showcases__descr {
     margin-bottom: 100px;
+  }
+  .showcase-more_top__content {
+    margin-bottom: 100px;
+  }
+  .showcase-more__aboutcase.column {
+    display: flex;
+    gap: 20px;
+  }
+  .showcase-more__aboutcase.column > * {
+    flex-basis: 50%;
   }
 }
 
