--- a/web/wp-content/themes/rankexperts/assets/css/custom.css
+++ b/web/wp-content/themes/rankexperts/assets/css/custom.css
@@ -173,3 +173,8 @@
 .lang-switcher-mobile .lang-switcher-mobile__item {
   padding: 10px 15px;
 }
+.content-none {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
