--- a/web/wp-content/themes/rankexperts/assets/css/global.css
+++ b/web/wp-content/themes/rankexperts/assets/css/global.css
@@ -263,6 +263,9 @@ html {
   }
 }
 .container-big {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   margin: 0 auto;
   max-width: 1920px;
   width: 100%;
