--- a/web/wp-content/themes/rankexperts/assets/css/home-page.css
+++ b/web/wp-content/themes/rankexperts/assets/css/home-page.css
@@ -52,41 +52,41 @@
   font-weight: 500;
   line-height: 1.12;
   margin-bottom: 15px;
-  max-width: 293px;
+  max-width: 375px;
   position: relative;
   z-index: 2;
 }
 @media (min-width: 767px) {
   .subhead__title {
     font-size: 36px;
-    max-width: 350px;
+    max-width: 520px;
   }
 }
 @media (min-width: 1024px) {
   .subhead__title {
     font-size: 42px;
     line-height: 1.2;
-    max-width: 500px;
+    max-width: 580px;
   }
 }
 @media (min-width: 1200px) {
   .subhead__title {
     font-size: 52px;
-    max-width: 600px;
+    max-width: 680px;
   }
 }
 @media (min-width: 1400px) {
   .subhead__title {
     font-size: 62px;
     line-height: 1.3;
-    max-width: 680px;
+    max-width: 780px;
   }
 }
 @media (min-width: 1920px) {
   .subhead__title {
     font-size: 72px;
     line-height: 1.35;
-    max-width: 740px;
+    max-width: 860px;
   }
 }
 .subhead__title span {
@@ -107,28 +107,28 @@
 @media (min-width: 1024px) {
   .subhead__descr {
     font-size: 24px;
-    max-width: 400px;
+    max-width: 500px;
   }
 }
 @media (min-width: 1200px) {
   .subhead__descr {
     font-size: 26px;
     margin-bottom: 26px;
-    max-width: 500px;
+    max-width: 600px;
   }
 }
 @media (min-width: 1400px) {
   .subhead__descr {
     font-size: 28px;
     margin-bottom: 40px;
-    max-width: 550px;
+    max-width: 650px;
   }
 }
 @media (min-width: 1920px) {
   .subhead__descr {
     font-size: 30px;
     margin-bottom: 50px;
-    max-width: 640px;
+    max-width: 740px;
   }
 }
 .subhead__btn {
@@ -220,8 +220,9 @@
   }
 }
 .marketing__title {
-  margin-bottom: 25px;
+  margin: 0 auto 25px;
   text-align: center;
+  max-width: 990px;
 }
 .marketing__slogan {
   margin: 0 auto 15px;
@@ -594,25 +595,26 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 70px;
+    justify-content: space-between;
+    gap: 40px;
   }
 }
 @media (min-width: 1024px) {
   .action__items {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
-    gap: 155px;
+    gap: 80px;
     justify-content: space-between;
   }
 }
 @media (min-width: 767px) {
   .action__item:first-child {
-    max-width: 500px;
+    max-width: 600px;
   }
 }
 @media (min-width: 1024px) {
   .action__item:first-child {
-    max-width: 772px;
+    max-width: 850px;
   }
 }
 @media (min-width: 767px) {
@@ -632,14 +634,9 @@
     -webkit-box-pack: end;
     -ms-flex-pack: end;
     justify-content: flex-end;
-    margin-right: 30px;
   }
 }
-@media (min-width: 1400px) {
-  .action__item:last-child {
-    margin-right: 60px;
-  }
-}
+
 .action__item {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -658,21 +655,22 @@
   font-weight: 500;
   margin-bottom: 15px;
   text-align: center;
+  line-height: 1.1;
 }
 @media (min-width: 767px) {
   .action__item-title {
-    font-size: 40px;
+    font-size: 32px;
   }
 }
 @media (min-width: 1024px) {
   .action__item-title {
-    font-size: 50px;
+    font-size: 42px;
     text-align: left;
   }
 }
 @media (min-width: 1400px) {
   .action__item-title {
-    font-size: 64px;
+    font-size: 56px;
   }
 }
 .action__item-title span {
@@ -1160,16 +1158,19 @@
   }
 }
 .ruls {
-  padding: 25px 0;
+  padding-top: 25px;
 }
 @media (min-width: 1400px) {
   .ruls {
-    padding: 50px 0;
+    padding-top: 50px;
   }
 }
 .ruls__title {
-  margin-bottom: 50px;
+  margin: 0 auto 50px;
   text-align: center;
+  max-width: 1150px;
+  font-size: calc(21px + (36 - 21) * ((100vw - 375px) / (1920 - 375)));
+  line-height: 1.2;
 }
 @media (min-width: 1024px) {
   .ruls__steps {
@@ -1191,8 +1192,9 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  height: auto;
   max-width: 340px;
-  min-height: 265px;
+  height: fit-content;
 }
 .ruls__item:not(:last-child) {
   margin-bottom: 50px;
@@ -1204,7 +1206,7 @@
 }
 @media (min-width: 1024px) {
   .ruls__item {
-    height: 265px;
+    height: fit-content;
     max-width: 400px;
     min-height: 265px;
   }
@@ -1217,7 +1219,7 @@
 .ruls__num {
   color: #e4101a;
   font-family: Mukta Vaani, sans-serif;
-  font-size: 250px;
+  font-size: 200px;
   font-weight: 500;
   line-height: 1;
   position: relative;
@@ -1226,9 +1228,9 @@
   -ms-flex-item-align: center;
   align-self: center;
   margin-left: auto;
-  max-height: 265px;
+  height: 100%;
   max-width: 250px;
-  padding: 10px 0 0 30px;
+  padding-top: 50px;
   width: 100%;
   z-index: 3;
 }
@@ -1253,11 +1255,12 @@
   text-align: center;
 }
 .ruls__info-text {
-  max-height: 100px;
+  min-height: 100px;
   max-width: 250px;
   overflow-y: hidden;
   padding-right: 5px;
   width: 100%;
+  font-size:18px;
 }
 :root {
   --bg1: #f5f8f7;
@@ -1281,7 +1284,7 @@ ul.infoGraphic li .coverWrap {
   top: -16px;
   -webkit-transform: rotate(130deg);
   transform: rotate(130deg);
-  width: 288px;
+  width: 200px;
 }
 ul.infoGraphic li .coverWrap .numberCover {
   background: var(--bg1);
@@ -1291,7 +1294,8 @@ ul.infoGraphic li .coverWrap .numberCover {
   position: absolute;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-  width: 288px;
+  width: 250px;
+  right: -10px;
 }
 ul.infoGraphic li .coverWrap .numberCover:before {
   border-radius: 100px/10px;
