--- a/web/wp-content/themes/rankexperts/assets/css/blog.css
+++ b/web/wp-content/themes/rankexperts/assets/css/blog.css
@@ -1,132 +1,1 @@
-.blog {
-  padding-bottom: calc(27.71845px + 1.94175vw);
-  padding-top: 0;
-}
-.blog-inner {
-  padding-top: 15px;
-}
-
-@media (min-width: 1024px) {
-  .blog-inner {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 25px;
-    padding-top: 30px;
-  }
-}
-.blog-article {
-  margin-bottom: 25px;
-  max-width: 767px;
-  width: 100%;
-}
-@media (min-width: 1024px) {
-  .blog-article {
-    -webkit-box-flex: 60%;
-    -ms-flex-negative: 1;
-    -ms-flex: 60%;
-    flex: 60%;
-    flex-shrink: 1;
-  }
-}
-.blog-article__img img,
-.blog-article__img source {
-  border-radius: 16px;
-  margin-bottom: calc(12.57282px + 0.64725vw);
-  max-height: 450px;
-  max-width: 743px;
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100%;
-}
-.blog .blog-article__title {
-  color: #201f1d;
-  font-family: Mukta Vaani, sans-serif;
-  font-size: calc(24px + (30 - 24) * ((100vw - 375px) / (1024 - 375)));  
-  font-weight: 500;
-  margin-bottom: 15px;
-}
-.blog .blog-article__summary {
-  font-size: calc(14.05825px + 0.5178vw);
-  margin-bottom: calc(10.08738px + 0.7767vw);
-}
-@media (min-width: 1024px) {
-  .blog-items {
-    -webkit-box-flex: 40%;
-    -ms-flex-negative: 0;
-    -ms-flex: 40%;
-    flex: 40%;
-    flex-shrink: 0;
-  }
-  .blog .blog-article__title {
-    font-size: calc(20.1165px + 1.0356vw);
-  }
-}
-.blog-item {
-  margin-bottom: 40px;
-  max-width: 767px;
-  width: 100%;
-}
-@media (min-width: 1024px) {
-  .blog-item {
-    margin-bottom: 25px;
-    width: 541px;
-  }
-}
-@media (min-width: 1400px) {
-  .blog-item {
-    max-width: 767px;
-    width: 100%;
-  }
-}
-@media (min-width: 1024px) {
-  .blog-article__left .blog-article__items {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 26px;
-  }
-}
-.blog-article__left-img {
-  border-radius: 16px;
-  margin-bottom: calc(12.57282px + 0.64725vw);
-  max-height: 450px;
-  max-width: 743px;
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100%;
-}
-@media (min-width: 1024px) {
-  .blog-article__left-img {
-    height: 209px;
-    -o-object-fit: cover;
-    object-fit: cover;
-    width: 216px;
-  }
-}
-@media (min-width: 1400px) {
-  .blog-article__left-img {
-    height: 267px;
-    width: 230px;
-  }
-}
-.blog-article__item-title {
-  font-family: Mukta Vaani, sans-serif;
-  font-size: calc(24px + (30 - 24) * ((100vw - 375px) / (1024 - 375)));
-  
-  font-weight: 500;
-  margin-bottom: 15px;
-}
-.blog-article__item-summary {
-  font-size: calc(14.05825px + 0.5178vw);
-  margin-bottom: calc(10.08738px + 0.7767vw);
-}
-@media (min-width: 1024px) {
-  .blog-article__item-summary {
-    min-height: 100px;
-    font-size: 18px;
-  }
-  .blog-article__item-title {
-    font-size: calc(21px + (27 - 21) * ((100vw - 1024px) / (1920 - 1024)));
-  }
-}
+.blog{padding-bottom:calc(27.71845px + 1.94175vw);padding-top:0}.blog-inner{padding-top:15px}.blog-article{margin-bottom:25px;max-width:767px;width:100%}.blog-article__img img,.blog-article__img source,.blog-article__left-img{border-radius:16px;margin-bottom:calc(12.57282px + .64725vw);max-height:450px;max-width:743px;-o-object-fit:cover;object-fit:cover;width:100%}.blog .blog-article__title{color:#201f1d;font-family:Mukta Vaani,sans-serif;font-size:calc(24px + (30 - 24) * ((100vw - 375px) / (1024 - 375)));font-weight:500;margin-bottom:15px}.blog .blog-article__summary,.blog-article__item-summary{font-size:calc(14.05825px + .5178vw);margin-bottom:calc(10.08738px + .7767vw)}.blog-item{margin-bottom:40px;max-width:767px;width:100%}@media (min-width:1024px){.blog-inner{display:-webkit-box;display:-ms-flexbox;display:flex;gap:25px;padding-top:30px}.blog-article{-webkit-box-flex:60%;-ms-flex-negative:1;-ms-flex:60%;flex:60%;flex-shrink:1}.blog-items{-webkit-box-flex:40%;-ms-flex-negative:0;-ms-flex:40%;flex:40%;flex-shrink:0}.blog .blog-article__title{font-size:calc(20.1165px + 1.0356vw)}.blog-item{margin-bottom:25px;width:541px}.blog-article__left .blog-article__items{display:-webkit-box;display:-ms-flexbox;display:flex;gap:26px}}@media (min-width:1024px){.blog-article__left-img{height:209px;-o-object-fit:cover;object-fit:cover;width:216px}}@media (min-width:1400px){.blog-item{max-width:767px;width:100%}.blog-article__left-img{height:267px;width:230px}}.blog-article__item-title{font-family:Mukta Vaani,sans-serif;font-size:calc(24px + (30 - 24) * ((100vw - 375px) / (1024 - 375)));font-weight:500;margin-bottom:15px}@media (min-width:1024px){.blog-article__item-summary{min-height:100px;font-size:18px}.blog-article__item-title{font-size:calc(21px + (27 - 21) * ((100vw - 1024px) / (1920 - 1024)))}}
